# greentic-distributor-client

./: Cargo.toml  README.md  SECURITY_FIX_REPORT.md  coverage-policy.json  pr-changed-files.txt  pr-comment.md
.codex/: PR-00-AUDIT.md  PR-00-release-context-audit.md  PR-01-bundle-ref-resolution-and-cache.md  PR-02-advisory-and-trust-inputs.md  PR-02-release-context-aware-oci-resolution.md  PR-03-operator-embedded-runtime-integration.md  PR-04-offline-rollback-and-retention.md  PR-06-release-context-resolution-tests.md  repo_overview.md
.codex/done/: PR-00-AUDIT.md  PR-01-bundle-ref-resolution-and-cache.md  PR-02-advisory-and-trust-inputs.md  PR-03-operator-embedded-runtime-integration.md  PR-04-offline-rollback-and-retention.md
.github/workflows/: ci.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dev-publish.yml  nightly-coverage.yml  nightly-semver.yml  publish.yml
benches/: perf.rs
ci/: local_check.sh
docs/: oci_packs.md
src/: dist.rs  dist_cli.rs  http.rs  lib.rs  oci_components.rs  oci_packs.rs  runner_api.rs  signing.rs  store_agentic_worker.rs  store_auth.rs  store_ext.rs  wit_client.rs
tests/: dist_cli.rs  dist_client.rs  http_client.rs  oci_components.rs  oci_components_e2e.rs  oci_packs.rs  pack_cli_parity.rs  perf_scaling.rs  perf_support.rs  perf_timeout.rs  store_agentic_worker.rs  store_ext.rs  wit_client.rs
