bench = [
    { name = "perf", harness = false },
]

[workspace]
members = [
    ".",
    "greentic-distributor-dev",
]
resolver = "2"

[workspace.package]
version = "0.6.0-dev.0"
edition = "2024"

[workspace.dependencies]
tempfile = "3"

[workspace.dependencies.greentic-distributor-client]
path = "."
version = ">=0.6.0-dev, <0.7.0-0"

[package]
name = "greentic-distributor-client"
version.workspace = true
edition = "2024"
description = "WIT-based client for the greentic:distributor-api@1.0.0 distributor resolver."
license = "MIT"
repository = "https://github.com/greenticai/greentic-distributor-client"
homepage = "https://greentic.ai"
readme = "README.md"
keywords = [
    "greentic",
    "distributor",
    "wasm",
    "wit",
]
categories = [
    "network-programming",
    "wasm",
]

[features]
default = [
    "dist-cli",
]
http-runtime = [
    "reqwest",
]
oci-components = [
    "dirs-next",
    "oci-distribution",
    "sha2",
]
pack-fetch = [
    "dirs-next",
    "oci-distribution",
    "sha2",
]
runner-api = [
    "dirs-next",
    "oci-distribution",
    "sha2",
]
dist-client = [
    "oci-components",
    "reqwest",
    "pack-fetch",
]
dist-cli = [
    "clap",
    "dist-client",
    "pack-fetch",
]
fixture-resolver = [
    "dist-client",
]

[dependencies]
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
anyhow = "1"
greentic-config-types = "0.5"
semver = "1"
rpassword = "7"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = [
    "json",
    "query",
    "rustls",
]
optional = true

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.greentic-types]
version = "0.5"
features = [
    "schema",
]

[dependencies.greentic-interfaces-guest]
version = "0.5"
features = [
    "distributor-api",
    "distributor-api-imports",
]

[dependencies.greentic-secrets-lib]
version = "0.5"
features = [
    "providers-dev",
]

[dependencies.oci-distribution]
version = "0.11"
default-features = false
features = [
    "rustls-tls",
]
optional = true

[dependencies.sha2]
version = "0.11"
optional = true

[dependencies.dirs-next]
version = "2"
optional = true

[dependencies.clap]
version = "4"
features = [
    "derive",
]
optional = true

[dev-dependencies]
httpmock = "0.8"
assert_cmd = "2"
flate2 = "1"
tar = "0.4"
criterion = "0.8"

[dev-dependencies.tempfile]
workspace = true

[[bin]]
name = "greentic-dist"
path = "src/bin/greentic-dist.rs"
required-features = [
    "dist-cli",
]

[[bin]]
name = "greentic-distributor-client"
path = "src/bin/greentic-distributor-client.rs"
required-features = [
    "dist-cli",
]
