bench = [
    { name = "perf", harness = false },
]

[workspace]
members = [
    ".",
    "greentic-distributor-dev",
]
resolver = "2"

[workspace.package]
version = "1.2.0-research.1"
edition = "2024"

[workspace.dependencies]
tempfile = "3"

[workspace.dependencies.greentic-distributor-client]
path = "."
version = "=1.2.0-research.1"

[package]
name = "greentic-distributor-client"
version.workspace = true
edition = "2024"
description = "WIT-based client for the greentic:distributor-api@1.0.0 distributor resolver."
license = "MIT"
repository = "https://github.com/greenticai/greentic-distributor-client"
homepage = "https://greentic.ai"
readme = "README.md"
keywords = [
    "greentic",
    "distributor",
    "wasm",
    "wit",
]
categories = [
    "network-programming",
    "wasm",
]

[features]
default = [
    "dist-cli",
]
http-runtime = [
    "reqwest",
]
oci-components = [
    "dirs-next",
    "oci-distribution",
]
pack-fetch = [
    "dirs-next",
    "oci-distribution",
]
runner-api = [
    "dirs-next",
    "oci-distribution",
]
component-runner = [
    "oci-components",
    "wasmtime",
    "wasmtime-wasi",
    "ciborium",
]
dist-client = [
    "oci-components",
    "reqwest",
    "pack-fetch",
]
dist-cli = [
    "clap",
    "dist-client",
    "pack-fetch",
]
fixture-resolver = [
    "dist-client",
]

[dependencies]
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
anyhow = "1"
greentic-config-types = "=1.2.0-research.1"
semver = "1"
rpassword = "7"
tempfile = { workspace = true }
base64 = "0.22"
hex = "0.4"
tracing = "0.1"
wasmtime = { version = "43", features = ["component-model"], optional = true }
wasmtime-wasi = { version = "43", optional = true }
ciborium = { version = "0.2", optional = true }

[dependencies.ed25519-dalek]
version = "2"
features = [
    "pkcs8",
    "pem",
]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = [
    "json",
    "query",
    "rustls",
    "blocking",
]
optional = true

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.greentic-types]
version = "=1.2.0-research.2"
features = [
    "schema",
]

[dependencies.greentic-interfaces-guest]
version = "=1.2.0-research.1"
features = [
    "distributor-api",
    "distributor-api-imports",
]

[dependencies.greentic-secrets-lib]
version = "=1.2.0-research.1"
features = [
    "providers-dev",
]

[dependencies.oci-distribution]
version = "0.11"
default-features = false
features = [
    "rustls-tls",
]
optional = true

[dependencies.sha2]
version = "0.11"

[dependencies.dirs-next]
version = "2"
optional = true

[dependencies.clap]
version = "4"
features = [
    "derive",
]
optional = true

[dev-dependencies]
httpmock = "0.8"
assert_cmd = "2"
flate2 = "1"
tar = "0.4"
criterion = "0.8"

[[bin]]
name = "greentic-dist"
path = "src/bin/greentic-dist.rs"
required-features = [
    "dist-cli",
]

[[bin]]
name = "greentic-distributor-client"
path = "src/bin/greentic-distributor-client.rs"
required-features = [
    "dist-cli",
]

[[bin]]
name = "greentic-component-runner"
path = "src/bin/greentic-component-runner.rs"
required-features = [
    "component-runner",
]